--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,8 +1,8 @@
 <resources>
     <string name="app_name">ATVLinks</string>
-    <string name="large_text">
-        "this is one url: http://www.baidu.com  \n\n"
-        "this is two url: http://www.xiaomi.com  \n\n"
+    <string name="large_text">this is one url: http://www.baidu.com  \n\n
+        this is two url: http://www.xiaomi.com  \n\n
+
         "Material is the metaphor.\n\n"
 
         "A material metaphor is the unifying theory of a rationalized space and a system of motion."
@@ -91,5 +91,6 @@
         "For example, position the FAB to one side of stream of a cards so the FAB won’t interfere "
         "when a user tries to pick up one of cards.\n\n"
     </string>
-    <string name="action_settings">Settings</string>
+    <string name="action_about">about</string>
+    <string name="title_activity_main">MainActivity</string>
 </resources>
